# cosmic-system-monitor

./: Cargo.toml  LICENSE  README.md  README.pt-BR.md  justfile
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  i18n.rs
