[package]
name = "cosmic-sys-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
nvml-wrapper = "0.11.0"
i18n-embed-fl = "0.10"
rust-embed = "8.7.2"
tokio = { version = "1.48.0", features = ["full"] }
sysinfo = { version = "0.33", features = ["network", "system", "component"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
branch = "master"
features = [
    "applet",
    "applet-token",
    "dbus-config",
    "multi-window",
    "tokio",
    "wayland",
    "winit",
]
